--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "devDependencies": {
     "@types/node": "14.14.7",
     "parcel-bundler": "1.12.4",
+    "prettier": "2.2.0",
     "typescript": "4.0.5"
   },
   "dependencies": {
