--- a/package.json
+++ b/package.json
@@ -4,11 +4,15 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "commitlint": "commitlint --from fcc75b5",
+    "lint": "npm run commitlint && prettier --check .",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@commitlint/cli": "11.0.0",
+    "@commitlint/config-conventional": "11.0.0",
     "@types/node": "14.14.7",
     "parcel-bundler": "1.12.4",
     "prettier": "2.2.0",
