--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -31,7 +31,10 @@ jobs:
           restore-keys: |
             ${{ runner.OS }}-node-
             ${{ runner.OS }}-
-      - name: Install dependencies and run tests
-        run: npm ci && npm test
+      - name: Install dependencies
+        run: npm ci
         env:
           CI: true
+      - uses: wagoid/commitlint-github-action@v2
+      - name: Run linter
+        run: npm run prettier
