--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -18,6 +18,8 @@ jobs:
 
     steps:
       - uses: actions/checkout@v2
+        with:
+          fetch-depth: 0
       - name: Use Node.js ${{ matrix.node-version }}
         uses: actions/setup-node@v1
         with:
@@ -35,6 +37,7 @@ jobs:
         run: npm ci
         env:
           CI: true
-      - uses: wagoid/commitlint-github-action@v2
+      - name: Run commitlint
+        run: npm run commitlint
       - name: Run linter
         run: npm run prettier
