--- a/package.json
+++ b/package.json
@@ -4,9 +4,11 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "build": "rimraf dist/**.* && parcel build ./src/index.html",
     "commitlint": "commitlint --from fcc75b5",
-    "prettier": "prettier --check .",
     "lint": "npm run commitlint && npm run prettier",
+    "prettier": "prettier --check .",
+    "start": "parcel ./src/index.html",
     "test": "echo \"no tests yet\""
   },
   "author": "",
@@ -17,6 +19,7 @@
     "@types/node": "14.14.7",
     "parcel-bundler": "1.12.4",
     "prettier": "2.2.0",
+    "rimraf": "^3.0.2",
     "typescript": "4.0.5"
   },
   "dependencies": {
